jclass/snapshots/vm-hello_world-PrintHelloWorldOkMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class hello_world.PrintHelloWorldOkMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #21                      //hello_world/PrintHelloWorldOkMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // java/lang/System.out:Ljava/io/PrintStream;
   #8 = Class              #10              // java/lang/System
   #9 = NameAndType        #11:#12          // out:Ljava/io/PrintStream;
  #10 = Utf8               java/lang/System
  #11 = Utf8               out
  #12 = Utf8               Ljava/io/PrintStream;
  #13 = String             #14              // Hello World!
  #14 = Utf8               Hello World!
  #15 = Methodref          #16.#17          // java/io/PrintStream.println:(Ljava/lang/String;)V
  #16 = Class              #18              // java/io/PrintStream
  #17 = NameAndType        #19:#20          // println:(Ljava/lang/String;)V
  #18 = Utf8               java/io/PrintStream
  #19 = Utf8               println
  #20 = Utf8               (Ljava/lang/String;)V
  #21 = Class              #22              // hello_world/PrintHelloWorldOkMain
  #22 = Utf8               hello_world/PrintHelloWorldOkMain
  #23 = Utf8               Code
  #24 = Utf8               LineNumberTable
  #25 = Utf8               LocalVariableTable
  #26 = Utf8               this
  #27 = Utf8               Lhello_world/PrintHelloWorldOkMain;
  #28 = Utf8               main
  #29 = Utf8               ([Ljava/lang/String;)V
  #30 = Utf8               args
  #31 = Utf8               [Ljava/lang/String;
  #32 = Utf8               SourceFile
  #33 = Utf8               PrintHelloWorldOkMain.java
{
  public hello_world.PrintHelloWorldOkMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lhello_world/PrintHelloWorldOkMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=2, locals=1, args_size=1
         0: getstatic     #7                  // Field java/lang/System.out:Ljava/io/PrintStream;
         3: ldc           #13                 // String Hello World!
         5: invokevirtual #15                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
         8: return                  
      LineNumberTable:
        line 5: 0
        line 6: 8
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  args   [Ljava/lang/String;
}
SourceFile: "PrintHelloWorldOkMain.java"
