jclass/snapshots/vm-primitives-int_arithmetic_ok-IntArithmeticOkMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class primitives.int_arithmetic_ok.IntArithmeticOkMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #12                      //primitives/int_arithmetic_ok/IntArithmeticOkMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 3, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/Integer
   #8 = Utf8               java/lang/Integer
   #9 = Integer            2147483647
  #10 = Integer            -2147483648
  #11 = Fieldref           #12.#13          // primitives/int_arithmetic_ok/IntArithmeticOkMain.$assertionsDisabled:Z
  #12 = Class              #14              // primitives/int_arithmetic_ok/IntArithmeticOkMain
  #13 = NameAndType        #15:#16          // $assertionsDisabled:Z
  #14 = Utf8               primitives/int_arithmetic_ok/IntArithmeticOkMain
  #15 = Utf8               $assertionsDisabled
  #16 = Utf8               Z
  #17 = Class              #18              // java/lang/AssertionError
  #18 = Utf8               java/lang/AssertionError
  #19 = String             #20              // divrem.identity
  #20 = Utf8               divrem.identity
  #21 = Methodref          #17.#22          // java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
  #22 = NameAndType        #5:#23           // "<init>":(Ljava/lang/Object;)V
  #23 = Utf8               (Ljava/lang/Object;)V
  #24 = Integer            -1437226411
  #25 = Integer            252645135
  #26 = Integer            168102405
  #27 = String             #28              // bit.and
  #28 = Utf8               bit.and
  #29 = Integer            -1352683681
  #30 = String             #31              // bit.or
  #31 = Utf8               bit.or
  #32 = String             #33              // bit.xor.self
  #33 = Utf8               bit.xor.self
  #34 = String             #35              // iinc.wrap
  #35 = Utf8               iinc.wrap
  #36 = Fieldref           #37.#38          // java/lang/System.out:Ljava/io/PrintStream;
  #37 = Class              #39              // java/lang/System
  #38 = NameAndType        #40:#41          // out:Ljava/io/PrintStream;
  #39 = Utf8               java/lang/System
  #40 = Utf8               out
  #41 = Utf8               Ljava/io/PrintStream;
  #42 = String             #43              // All assertions passed.
  #43 = Utf8               All assertions passed.
  #44 = Methodref          #45.#46          // java/io/PrintStream.println:(Ljava/lang/String;)V
  #45 = Class              #47              // java/io/PrintStream
  #46 = NameAndType        #48:#49          // println:(Ljava/lang/String;)V
  #47 = Utf8               java/io/PrintStream
  #48 = Utf8               println
  #49 = Utf8               (Ljava/lang/String;)V
  #50 = Methodref          #51.#52          // java/lang/Class.desiredAssertionStatus:()Z
  #51 = Class              #53              // java/lang/Class
  #52 = NameAndType        #54:#55          // desiredAssertionStatus:()Z
  #53 = Utf8               java/lang/Class
  #54 = Utf8               desiredAssertionStatus
  #55 = Utf8               ()Z
  #56 = Utf8               Code
  #57 = Utf8               LineNumberTable
  #58 = Utf8               LocalVariableTable
  #59 = Utf8               this
  #60 = Utf8               Lprimitives/int_arithmetic_ok/IntArithmeticOkMain;
  #61 = Utf8               main
  #62 = Utf8               ([Ljava/lang/String;)V
  #63 = Utf8               args
  #64 = Utf8               [Ljava/lang/String;
  #65 = Utf8               IMAX
  #66 = Utf8               I
  #67 = Utf8               IMIN
  #68 = Utf8               a
  #69 = Utf8               b
  #70 = Utf8               x
  #71 = Utf8               y
  #72 = Utf8               p
  #73 = Utf8               StackMapTable
  #74 = Class              #64              // "[Ljava/lang/String;"
  #75 = Utf8               <clinit>
  #76 = Utf8               SourceFile
  #77 = Utf8               IntArithmeticOkMain.java
{
  static final boolean $assertionsDisabled;
    descriptor: Z
    flags: (0x1018) ACC_STATIC, ACC_FINAL, ACC_SYNTHETIC
  
  public primitives.int_arithmetic_ok.IntArithmeticOkMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lprimitives/int_arithmetic_ok/IntArithmeticOkMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=8, args_size=1
         0: ldc           #9                  // int 2147483647
         2: istore_1                
         3: ldc           #10                 // int -2147483648
         5: istore_2                
         6: sipush        -12345            
         9: istore_3                
        10: bipush        67                
        12: istore        4                 
        14: getstatic     #11                 // Field $assertionsDisabled:Z
        17: ifne          46                
        20: iload_3                 
        21: iload         4                 
        23: idiv                    
        24: iload         4                 
        26: imul                    
        27: iload_3                 
        28: iload         4                 
        30: irem                    
        31: iadd                    
        32: iload_3                 
        33: if_icmpeq     46                
        36: new           #17                 // class java/lang/AssertionError
        39: dup                     
        40: ldc           #19                 // String divrem.identity
        42: invokespecial #21                 // Method java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
        45: athrow                  
        46: ldc           #24                 // int -1437226411
        48: istore        5                 
        50: ldc           #25                 // int 252645135
        52: istore        6                 
        54: getstatic     #11                 // Field $assertionsDisabled:Z
        57: ifne          80                
        60: iload         5                 
        62: iload         6                 
        64: iand                    
        65: ldc           #26                 // int 168102405
        67: if_icmpeq     80                
        70: new           #17                 // class java/lang/AssertionError
        73: dup                     
        74: ldc           #27                 // String bit.and
        76: invokespecial #21                 // Method java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
        79: athrow                  
        80: getstatic     #11                 // Field $assertionsDisabled:Z
        83: ifne          106               
        86: iload         5                 
        88: iload         6                 
        90: ior                     
        91: ldc           #29                 // int -1352683681
        93: if_icmpeq     106               
        96: new           #17                 // class java/lang/AssertionError
        99: dup                     
       100: ldc           #30                 // String bit.or
       102: invokespecial #21                 // Method java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
       105: athrow                  
       106: getstatic     #11                 // Field $assertionsDisabled:Z
       109: ifne          130               
       112: iload         5                 
       114: iload         5                 
       116: ixor                    
       117: ifeq          130               
       120: new           #17                 // class java/lang/AssertionError
       123: dup                     
       124: ldc           #32                 // String bit.xor.self
       126: invokespecial #21                 // Method java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
       129: athrow                  
       130: iconst_1                
       131: istore        7                 
       133: iload         7                 
       135: ldc           #9                  // int 2147483647
       137: iadd                    
       138: istore        7                 
       140: getstatic     #11                 // Field $assertionsDisabled:Z
       143: ifne          163               
       146: iload         7                 
       148: ldc           #10                 // int -2147483648
       150: if_icmpeq     163               
       153: new           #17                 // class java/lang/AssertionError
       156: dup                     
       157: ldc           #34                 // String iinc.wrap
       159: invokespecial #21                 // Method java/lang/AssertionError."<init>":(Ljava/lang/Object;)V
       162: athrow                  
       163: getstatic     #36                 // Field java/lang/System.out:Ljava/io/PrintStream;
       166: ldc           #42                 // String All assertions passed.
       168: invokevirtual #44                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
       171: return                  
      LineNumberTable:
        line 5: 0
        line 6: 3
        line 23: 6
        line 24: 14
        line 38: 46
        line 39: 54
        line 40: 80
        line 41: 106
        line 50: 130
        line 51: 133
        line 52: 140
        line 60: 163
        line 61: 171
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0      172     0  args   [Ljava/lang/String;
           3      169     1  IMAX   I
           6      166     2  IMIN   I
          10      162     3  a      I
          14      158     4  b      I
          50      122     5  x      I
          54      118     6  y      I
         133       39     7  p      I
      StackMapTable: number_of_entries = 5
        frame_type = 255 /* full_frame */
          offset_delta = 46
          locals = [class "[Ljava/lang/String;", int, int, int, int]
          stack = []
        frame_type = 253 /* append */
          offset_delta = 33
          locals = [int, int]
        frame_type = 25 /* same */
        frame_type = 23 /* same */
        frame_type = 252 /* append */
          offset_delta = 32
          locals = [int]
  
  static {};
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=1, locals=0, args_size=0
         0: ldc           #12                 // class primitives/int_arithmetic_ok/IntArithmeticOkMain
         2: invokevirtual #50                 // Method java/lang/Class.desiredAssertionStatus:()Z
         5: ifne          12                
         8: iconst_1                
         9: goto          13                
        12: iconst_0                
        13: putstatic     #11                 // Field $assertionsDisabled:Z
        16: return                  
      LineNumberTable:
        line 3: 0
      StackMapTable: number_of_entries = 2
        frame_type = 12 /* same */
        frame_type = 64 /* same_locals_1_stack_item */
          stack = [ int ]
}
SourceFile: "IntArithmeticOkMain.java"
